# nemotron-speech.cpp

./: .gitignore  LICENSE.MIT  Makefile  Makefile.ggml  Makefile.rawcpp  README.md  STATUS.md  STREAMING-manual.md  arch.md  main.cpp  preprocessor.cpp  pyproject.toml  vocab.txt
docs/: GGML_NEMO_MAPPING.md  STREAMING-v2.md  instrumentable_modules_full.txt  instrumentable_modules_hierarchy.txt
include/: conformer_encoder.h  conformer_modules.h  conv_subsampling.h  ggml_weights.h  greedy_decode.h  ops.h  rnnt_decoder.h  rnnt_joint.h  tokenizer.h
scripts/: compare_layers.py  compare_outputs.py  compare_subsampling.py  compare_tensors.py  convert_weights.py  debug_conv_layers.py  debug_joint_trace.py  gen_mel.py  my_streaming.py  precompute_encoder_ref.cpp
src/: conformer_encoder.cpp  conformer_modules.cpp  conv_subsampling.cpp  ggml_weights.cpp  greedy_decode.cpp  nemo-ggml.cpp  nemo-ggml.h  nemo-stream.cpp  nemo-stream.h  ops.cpp  preprocessor.cpp  rnnt_decoder.cpp  rnnt_joint.cpp  tokenizer.cpp  transcribe.cpp  transcribe_stream.cpp
src-ggml/: nemo-ggml.cpp  nemo-ggml.h  nemo-stream.cpp  nemo-stream.h  preprocessor.cpp
tests/: debug_attn_qkv.cpp  debug_conformer_trace.cpp  debug_conformer_trace2.cpp  debug_conv.cpp  debug_conv2.cpp  debug_conv3.cpp  debug_decode.cpp  debug_encoder.cpp  debug_greedy.cpp  debug_layer0.cpp  debug_pipeline.cpp  debug_pos_enc.cpp  debug_selfattn.cpp  debug_simple.cpp  debug_state.cpp  debug_subsampling.cpp  test_conformer_encoder.cpp  test_conformer_modules.cpp  test_ops.cpp  (+8 more)
tests-ggml/: test_compute.cpp  test_preprocessor.cpp
(+9 files in other folders)
